testsuite/tests/typing-layouts-products/parsing_nullary_term.compilers.reference
File "parsing_nullary_term.ml", line 10, characters 12-13:
10 | let x = #(())
                 ^
Error: Syntax error
